# ansible-collection-system

./: .env.sample  .yamllint.yml  Pipfile  README.md  galaxy.yml  pyproject.toml
.config/: ansible-lint-ignore.txt  ansible-lint.yml  yamllint.yml
extensions/molecule/default/: molecule.yml  prepare.yml  verify.yml
meta/: runtime.yml
molecule/default/: converge.yml  molecule.yml  prepare.yml  verify.yml
roles/apt_ppa_repository/defaults/: main.yml
roles/apt_ppa_repository/meta/: main.yml
roles/apt_ppa_repository/tasks/: main.yml
roles/apt_ppa_repository/vars/: main.yml
roles/apt_sources/defaults/: main.yml
roles/apt_sources/meta/: main.yml
roles/apt_sources/tasks/: main.yml
roles/docker_ce/defaults/: main.yml
roles/docker_ce/handlers/: main.yml
roles/docker_ce/meta/: main.yml
roles/docker_ce/tasks/: main.yml
roles/docker_ce/templates/etc/systemd/system/docker.service.d/: override.conf
roles/docker_ce/vars/: main.yml
roles/journald/defaults/: main.yml
roles/journald/handlers/: main.yml
roles/journald/meta/: main.yml
roles/journald/tasks/: main.yml
roles/locale/defaults/: main.yml
roles/locale/meta/: main.yml
roles/locale/tasks/: main.yml
roles/proxy/defaults/: main.yml
roles/proxy/files/etc/sudoers.d/: proxy
roles/proxy/meta/: main.yml
roles/proxy/tasks/: main.yml
roles/proxy/templates/etc/apt/apt.conf.d/: 90curtin-aptproxy
roles/proxy/templates/etc/profile.d/: export_proxy.sh
roles/systemd_timesyncd/defaults/: main.yml
roles/systemd_timesyncd/handlers/: main.yml
roles/systemd_timesyncd/meta/: main.yml
roles/systemd_timesyncd/tasks/: main.yml
roles/timezone/defaults/: main.yml
roles/timezone/meta/: main.yml
roles/timezone/tasks/: main.yml
