[project]
name = "ansible-collection-system"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "nakahiro386", email = "nakahiro386@gmail.com" }
]
dependencies = []

readme = "README.md"
requires-python = ">= 3.11"
classifiers = ["Private :: Do Not Upload"]

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "ansible>=9.1.0",
    "ansible-lint>=6.22.1",
    "molecule>=6.0.3",
    "molecule-plugins[docker]>=23.5.0",
    "dotenv-cli>=3.2.2",
]

[tool.rye.scripts]
"lint:yaml" = "dotenv yamllint ."
"lint:ansible" = {cmd = "dotenv ansible-lint"}
lint = {chain = ["lint:yaml", "lint:ansible"]}
molecule = {cmd = "dotenv molecule"}
