[project]
name = "ansible-collection-system"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "nakahiro386", email = "nakahiro386@gmail.com" }
]
dependencies = []

readme = "README.md"
requires-python = ">= 3.12"
classifiers = ["Private :: Do Not Upload"]

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "ansible~=9.3.0",
    "ansible-lint~=24.2.0",
    "molecule~=24.2.0",
    "molecule-plugins[docker]~=23.5.3",
]

[tool.rye.scripts]
"lint:yaml" = "yamllint -c .config/yamllint.yml ."
"lint:ansible" = {cmd = "ansible-lint"}
lint = {chain = ["lint:yaml", "lint:ansible"]}
molecule = {cmd = "molecule"}
